# ContextWeave-Proactive-Context-Intelligence-Platform

./: .gitignore  README.md
daemon/: README.md  main.py  pyproject.toml
daemon/contextweave/: __init__.py  chunker.py  config.py  db.py  embedder.py  gc.py  graph.py  models.py  ranker.py  server.py  stuck_detector.py
daemon/contextweave/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai_compat.py
daemon/eval/: _gen_golden_set.py  golden_set.json  retrieval_eval.py  stuck_eval.py
daemon/eval/results/: .gitkeep  baseline.json  retrieval_baseline.json  retrieval_upgrade_b.json  stuck_baseline.json
daemon/tests/: __init__.py  conftest.py  test_chunker.py  test_config.py  test_db.py  test_embedder.py  test_gc.py  test_graph.py  test_ranker.py  test_server.py  test_stuck_detector.py  test_workspace_isolation.py
extension/: .vscodeignore  esbuild.config.js  package-lock.json  package.json  tsconfig.json
extension/src/: config.ts  context-panel.ts  daemon-client.ts  extension.ts  injector.ts  types.ts
