[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextweave"
version = "1.0.0"
description = "Proactive ambient context engine for developers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlite-vec>=0.1.1",
    "httpx>=0.27.0",
    "tree-sitter>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-rust>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "pydantic>=2.6.0",
    "structlog>=24.1.0",
]

[project.scripts]
contextweave = "main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
